Fix collapsing navigation bar for category page
when opening page for smaller screens the menu
appered near the logo instead ot below

caused by flex-wrap that needs to be eliminitad
for smaller screen (due to changed flex direction)

--- a/styles.css
+++ b/styles.css
@@ -662,7 +662,9 @@ select:focus {
 /* Responsive design for hamburger menu */
 @media (max-width: 768px) {
     .header-container {
-      flex-wrap: wrap;
+        flex-direction: column;
+        align-items: stretch;
+        flex-wrap:nowrap;
     }
   
     .nav-toggle {
